[ENG-12760] Fix Staff dropdown long text wrapping (#1306)

--- a/src/components/common/AppQuoteComponents/index.scss
+++ b/src/components/common/AppQuoteComponents/index.scss
@@ -253,6 +253,10 @@
     &__staff-contacts {
       width: 30%;
 
+      .DropdownButton {
+        white-space: nowrap;
+      }
+
       @include tablet() {
         width: 100%;
       }
